# GECCO-data

./: dvc.yaml
data/6genomes/: .gitignore  Anabaena_variabilis_ATCC_29413_NC_007413.1.gbk.dvc  Pseudomonas_fluorescens_Pf-5_NC_004129.6.gbk.dvc  Saccharopolyspora_erythraea_NRRL_2338_AM420293.1.gbk.dvc  Salinispora_tropica_CNB-440_NC_009380.1.gbk.dvc  Sorangium_cellulosum_So_ce_56_AM746676.1.gbk.dvc  Streptomyces_griseus_griseus_NBRC_13350_AP009493.1.gbk.dvc
data/9genomes/: .gitignore  Kutzneria_sp_744_KK037166.1.gbk.dvc  Micromonospora_sp_ATCC_39149_GG657738.1.gbk.dvc  Micromonospora_sp_M42_KK037233.1.gbk.dvc  Streptomyces_albidoflavus_strain_J1074_DS999645.1.gbk.dvc  Streptomyces_ghanaensis_ATCC_14672_DS999641.1.gbk.dvc  Streptomyces_ghanaensis_ATCC_14672_DS999642.1.gbk.dvc  Streptomyces_hygroscopicus_ATCC_53653_GG657754.1.gbk.dvc  Streptomyces_pristinaespiralis_ATCC_25486_CM000950.1.gbk.dvc  Streptomyces_sp_AA4_GG657746.1.gbk.dvc  Streptomyces_sp_AA4_GG657747.1.gbk.dvc  Streptomyces_sp_C_GG657750.1.gbk.dvc  Streptomyces_sp_C_GG657751.1.gbk.dvc  Streptomyces_sp_C_GG657752.1.gbk.dvc
data/embeddings/: .gitignore  dvc.yaml  mibig-1.3.proG2.clusters.tsv  mibig-2.0.proG2.clusters.tsv
data/hmms/: .gitignore  Pfam-v31.0.hmm.gz.dvc  Pfam-v33.1.hmm.gz.dvc  Pfam-v34.0.hmm.gz.dvc  Tigrfam-v15.0.hmm.gz.dvc
data/mibig/: .gitignore  mibig-1.3.gbk.tar.gz.dvc  mibig-1.3.json.tar.gz.dvc  mibig-1.4.json.tar.gz.dvc  mibig-2.0.gbk.tar.gz.dvc  mibig-2.0.json.tar.gz.dvc  retire.txt
data/progenomes/: .gitignore  (+2 more)
src/anifa/: Cargo.toml  main.rs
src/samplefa/: Cargo.toml  main.rs
(+12 files in other folders)
