[package]
name = "samplefa"
version = "0.1.0"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2018"
publish = false

[dependencies]
bio = "0.41.0"
flate2 = "1.0.20"
indicatif = "0.16.2"
pico-args = "0.5.0"
rand = "0.8.3"
rand_chacha = "0.3.1"

[[bin]]
name = "samplefa"
path = "main.rs"
